# poc

./: README.md
lambda_deps_builder/: .gitignore  README.md  cdk.json  pyproject.toml
lambda_deps_builder/lambda_deps_builder/: __init__.py  construct.py
lambda_deps_builder/lambda_deps_builder/builder_handler/: handler.py
lambda_deps_builder/lambda_deps_builder/example/: app.py  example_stack.py
lambda_deps_builder/lambda_deps_builder/example/consumer_handler/: handler.py
lambda_deps_builder/tests/: conftest.py  test_builder_handler.py  test_construct_synth.py  test_e2e_deploy.py  test_example_stack_synth.py
pip_requirements_flattener/: README.md  flattener.py
